# haskell-books-and-exercises

./: Analysis.hs  FixPointAndRecSche.hs  Functoring.hs  Geometry.hi  Geometry.hs  Sty.hs  Vector.hs  person.hi  person.hs  test.txt  validation-test.hs
book-of-haskell/: *haskell*  .#*haskell*  Cipher.hi  Cipher.hs  airth3broken.hs  book.cabal  ch-10.hs  ch-11.hs  ch-12.hs  ch-13.hs  ch-15.hs  ch-16.hs  ch-17.hs  ch-18.hs  ch-20.hs  ch-9.hs  ch-datatypes.hs  list-comprehensions.hs  more-functional.hs  recursion.hs  try.hs  type-classes.hs  types.hs
book-of-haskell/.stack-work/install/x86_64-linux-nopie/lts-9.10/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  book-0.0.1-ASXQe86KLO1HqoiFV4Oua0  book-0.0.1-EQwCGesY3A5itZjSbtqtU  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  checkers-0.4.7-JCilnLl5HALEbvtY44GPJt  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL
book-of-haskell/.stack-work/install/x86_64-linux-nopie/lts-9.10/8.0.2/pkgdb/: book-0.0.1-ASXQe86KLO1HqoiFV4Oua0.conf  package.cache
book-of-haskell/.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.10/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  (+15 more)
(+94 files in other folders)
